--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.4",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
+    "react-toastify": "^9.1.3",
+    "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
