--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.3",
     "react-typical": "^0.1.3",
